# connect-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  USAGE.md  pyproject.toml  test-payload.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-check-signed-commits.yml  release-pr.yml  release.yml  test.yml
example/: Dockerfile  README.md  main.py  steps.py
example/ca_file_example/: list_secrets.py
src/onepasswordconnectsdk/: __init__.py  async_client.py  client.py  config.py  connect.py  errors.py  serializer.py  utils.py
src/onepasswordconnectsdk/models/: __init__.py  constants.py  error.py  field.py  field_section.py  file.py  full_item.py  full_item_all_of.py  full_item_all_of_fields.py  full_item_all_of_section.py  full_item_all_of_sections.py  generator_recipe.py  item.py  item_details.py  item_urls.py  item_vault.py  parsed_field.py  parsed_item.py  section.py  summary_item.py  vault.py
src/tests/: conftest.py  malicious_test.py  test_client_config.py  test_client_items.py  test_client_vaults.py  test_config.py  test_connect.py  test_utils.py
