[tool.poetry]
name = "onepasswordconnectsdk"
version = "1.3.0"
description = "Python SDK for 1Password Connect"
license = "MIT"
authors = ["1Password"]
readme = "README.md"
repository = "https://github.com/1Password/connect-sdk-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/1Password/connect-sdk-python/issues"
"Report Security Issue" = "https://bugcrowd.com/agilebits"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
six = "^1.10"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
