[tool.poetry]
name = "onepasswordconnectsdk"
version = "1.5.1"
description = "Python SDK for 1Password Connect"
license = "MIT"
authors = ["1Password"]
readme = "README.md"
repository = "https://github.com/1Password/connect-sdk-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/1Password/connect-sdk-python/issues"
"Report Security Issue" = "https://bugcrowd.com/agilebits"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
respx = "^0.20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
