[tool.poetry]
name = "onepasswordconnectsdk"
version = "2.0.0"
description = "Python SDK for 1Password Connect"
license = "MIT"
authors = ["1Password"]
readme = "README.md"
repository = "https://github.com/1Password/connect-sdk-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/1Password/connect-sdk-python/issues"
"Report Security Issue" = "https://bugcrowd.com/agilebits"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.3.0"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
